updated base to have jsInit

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -95,9 +95,19 @@
 	
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    {% endblock %}
+    {% endblock scripts %}
     
     {% block postscripts %}
 	{% endblock postscripts %}
+	
+	<script type="text/javascript">
+      {% block jsSetVars %}
+      {% endblock jsSetVars %}
+
+      {% block jsInit %}
+
+      {% endblock jsInit %}
+    </script>
+	
   </body>
 </html>
