--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -10,6 +10,7 @@
 
 	{% block cssMain %}
     <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     {% endblock cssMain %}
     
     {% block cssExtras %}
