--- a/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
+++ b/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
@@ -46,10 +46,10 @@
     			<br/>
     			<div class="controller_div">
 	          	<a class="btn btn-primary btn btn-primary-info" id="playbuttonLink" href="#" onclick="xgds_video.playButtonCallback()">
-	              <i id="playbutton" class="icon-play"></i>
+	              <i id="playbutton" class="fa fa-play fa-lg"></i>
 	              </a>
 	            <a class="btn btn-primary btn btn-primary-info" id="pausebuttonLink" href="#" onclick="xgds_video.pauseButtonCallback()">
-	              <i id="pausebutton" class="icon-pause active"></i>
+	              <i id="pausebutton" class="fa fa-pause fa-lg active"></i>
 	              </a>
 	             </div>
 	          </div>
