--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load pipeline %}
 {% load staticfiles %}
+{% load help_button %}
 
 <html lang="en">
   <head>
@@ -65,6 +66,7 @@
 	            {% else %} <!-- user.is_authenticated -->
 	                <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ login_url_with_next }}"title="Login">Login</a>
 	            {% endif %} 
+	            {% help_button help_content_path title %}
 	            </span>
 	            
 		</div>
