--- a/apps/basaltApp/templates/xgds_map_server/mapSearch_subnav.html
+++ b/apps/basaltApp/templates/xgds_map_server/mapSearch_subnav.html
@@ -1,19 +1,14 @@
 {% block sitemenu-content-secondary %}
 {% load nav %}
-{% load help_button %}
-<div class="sitemenu-nav-secondary">
 	<nav class="subnav">
-	{% help_button help_content_path help_title %}
-	<ul>
-		<li class="nav-item {% if modelName == 'Photo' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'Photo'%}">{{settings.XGDS_IMAGE_IMAGE_SET_MONIKER}}</a></li>
-		<!-- <li class="nav-item {% if modelName == 'Sample' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'Sample'%}">Sample</a></li>-->
-		<li class="nav-item {% if modelName == 'Sample' %}currentnav{% endif %}"><a href="{% url 'xgds_sample_fullsearch'%}">Sample</a></li>
-		<li class="nav-item {% if modelName == 'ASD' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'ASD'%}">ASD</a></li>
-		<li class="nav-item {% if modelName == 'FTIR' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'FTIR'%}">FTIR</a></li>
-		<li class="nav-item {% if modelName == 'pXRF' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'pXRF'%}">pXRF</a></li>
-		<li class="nav-item {% if modelName == 'Note' %}currentnav{% endif %}"><a href="{% url 'search_xgds_notes_map' %}">Notes</a></li>
-		<!-- <li class="nav-item {% if model_names %}currentnav{% endif %}"><a href="{% url 'basalt_live_objects'%}">Latest Data</a></li> -->
+	<ul class="nav nav-pills">
+		<li class="nav-item {% if modelName == 'Photo' %}active{% endif %}"><a class="nav-link {% if modelName == 'Photo' %}active{% endif %}" href="{% url 'search_map_object' 'Photo'%}">{{settings.XGDS_IMAGE_IMAGE_SET_MONIKER}}</a></li>
+		<li class="nav-item {% if modelName == 'Sample' %}active{% endif %}"><a class="nav-link {% if modelName == 'Sample' %}active{% endif %}" href="{% url 'xgds_sample_fullsearch'%}">Sample</a></li>
+		<li class="nav-item {% if modelName == 'ASD' %}active{% endif %}"><a class="nav-link {% if modelName == 'ASD' %}active{% endif %}" href="{% url 'search_map_object' 'ASD'%}">ASD</a></li>
+		<li class="nav-item {% if modelName == 'FTIR' %}active{% endif %}"><a class="nav-link {% if modelName == 'FTIR' %}active{% endif %}" href="{% url 'search_map_object' 'FTIR'%}">FTIR</a></li>
+		<li class="nav-item {% if modelName == 'pXRF' %}active{% endif %}"><a class="nav-link {% if modelName == 'pXRF' %}active{% endif %}" href="{% url 'search_map_object' 'pXRF'%}">pXRF</a></li>
+		<li class="nav-item {% if modelName == 'Note' %}active{% endif %}"><a class="nav-link {% if modelName == 'Note' %}active{% endif %}" href="{% url 'search_xgds_notes_map' %}">Notes</a></li>
+		<!-- <li class="nav-item {% if model_names %}active{% endif %}"><a class="nav-link {% if model_names %}active{% endif %}" href="{% url 'basalt_live_objects'%}">Latest Data</a></li> -->
   	</ul>
   	</nav>
-</div>
 {% endblock %}
