--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -1,7 +1,7 @@
 {% block sitemenu-content-secondary %}
 {% load nav %}
 <div class="subnav">
-	<ul class="nav nav-pills bg-body">
+	<ul class="nav nav-pills">
 		<li class='nav-item '>
 			<a class="nav-link {% currentnav planner2_index %} " href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a>
 		</li>
