tuning buttons working on forms working on tables

--- a/apps/basaltApp/templates/basaltApp/editEV.html
+++ b/apps/basaltApp/templates/basaltApp/editEV.html
@@ -8,14 +8,15 @@
 <h6>Add Crew Mass</h6>
 <p>
 For Sextant to calculate a traverse we have to specify the mass of the crewmember executing the EVA.<br/>
-<i>Mass in kg</i>
 </p>
 <form action="{% if pk %}{% url 'planner2_re_save_ev' pk %}{% else %}{% url 'planner2_save_ev' %}{% endif %}" method="post">
 <table class="table-striped">
 {{ form.as_table }}
 </table>
+<p>
 <input type='hidden' id="id_pk" value="{{pk}}">
-<input class="btn btn-primary small" type="submit" value="Save">
+<input class="btn btn-primary" type="submit" value="Save">
+</p>
 </form>
 </p>
 
