--- a/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
+++ b/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
@@ -7,7 +7,7 @@
  </style>
 
 <div> <strong>{{instrument_name}}</strong> 
-<a id="edit_instrument_button" href="/xgds_instrument/edit/{{instrument_name}}/{{pk}}" class="mybutton small" target="_blank">Edit</a></div>
+<a id="edit_instrument_button" href="/xgds_instrument/edit/{{instrument_name}}/{{pk}}" class="btn btn-primary" target="_blank">Edit</a></div>
 	<table>
 		{{#if name}}
 		<tr>
