--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -65,8 +65,8 @@
 		<td >&nbsp;&nbsp;&nbsp;{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}: {{ flight.name }}</td>
 		<td></td>
 		<td></td>
-		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'planner2_startFlight' flight.uuid %}" class="button small startButton">{% if flight.start_time %}re{%endif%}start</a></td>
-		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="button small stopButton">stop</a></td>
+		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'planner2_startFlight' flight.uuid %}" class="button  startButton">{% if flight.start_time %}re{%endif%}start</a></td>
+		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="button  stopButton">stop</a></td>
 		<td></td>
 	</tr>
 		{% for pe in flight.plans.all %}
