--- a/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
@@ -41,8 +41,8 @@
 		    </td>
 		</tr>
 		</table>
-		<input class="mybutton small" id="pextantButton"  type="submit" value="Call Sextant">
-		<input class="mybutton small" id="clearPextantButton"  type="submit" value="Clear Sextant Path">
+		<input class="btn btn-primary" id="pextantButton"  type="submit" value="Call Sextant">
+		<input class="btn btn-primary" id="clearPextantButton"  type="submit" value="Clear Sextant Path">
 	</form>
 	</p>
 	<div id="pextantMessage" style="color:red;"><br/></div>
