--- a/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
@@ -25,7 +25,7 @@
   			</select>
 		</tr>
 		</table>
-		<input class="mybutton small" id="submit_button"  type="submit" value="Save">
+		<input class="btn btn-primary" id="submit_button"  type="submit" value="Save">
 	</form>
 </div>
 <div id="schedule_message" style="color:red;"><br/></div>
