--- a/apps/basaltApp/templates/basaltApp/index.html
+++ b/apps/basaltApp/templates/basaltApp/index.html
@@ -8,7 +8,8 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
 </br>
 {% endif %}
 
-<table cellpadding="5" cellspacing="0" width="100%" class="table-striped">
+<p>
+<table >
   <tr>
     <td style="text-align:right"><strong>Map</strong></td>
     <td>View and manage map layers.  Get Google Earth link.</td>
@@ -44,4 +45,5 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
     <td>Send feedback to the xGDS development team.</td>
   </tr>
 </table>
+</p>
 {% endblock content %}
