--- a/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
+++ b/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
@@ -72,7 +72,7 @@
 	   		<div id="seekTimeBox" >
 				<label for="seekTime">Jump to:</label>
 	   			<input  id="seekTime" type="text" name="text-input" placeholder="HH:MM:SS" class="stylish"/>
-	   			<button type="submit" class="btn btn-primary small" id="seekButton" onclick='xgds_video.seekCallBack()'> Go </button>
+	   			<button type="submit" class="btn btn-primary" id="seekButton" onclick='xgds_video.seekCallBack()'> Go </button>
 	   		</div>
    		</div>
 
@@ -95,8 +95,8 @@
 			<div class="item {% if sources|length > 1 %}w2{% endif %} lockAspect" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
-	                 <a class="btn btn-primary toprow-right small" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="{% if sources|length > 1 %}{{flightName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
-                     <!-- <a class="btn btn-primary toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a> -->
+	                 <a class="btn btn-primary toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="{% if sources|length > 1 %}{{flightName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
+                     <!-- <a class="btn btn-primary toprow-right" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a> -->
                      {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="btn btn-primary" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
