--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -33,10 +33,10 @@
 	<span class="error">{{ errorString }}</span>
 	{% endif %}
 	<form name='TodayForm' id="todayForm" action="{% url 'planner2_updateToday' %}" method="post">
-	<input type="checkbox" name="today" id="id_today" {% if request.session.today %} checked="checked" {%endif %} style="margin-bottom:3px;"></input><label for="id_today">Today Only</label>
+	<input type="checkbox" name="today" id="id_today" {% if request.session.today %} checked="checked" {%endif %} ></input><label for="id_today">Today Only</label>
 	</form>
-	<a class="btn btn-primary" role="button" href="{% url 'planner2_addGroupFlight' %}" style="float:right;margin-bottom:3px;">Create {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
-	<a class="btn btn-primary" role="button" href="{% url 'planner2_manageFlightHelp' %}" style="float:right;margin-bottom:3px;" target="help">Help</a>
+	<a class="btn btn-primary" role="button" href="{% url 'planner2_addGroupFlight' %}" >Create {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
+	<a class="btn btn-primary" role="button" href="{% url 'planner2_manageFlightHelp' %}" target="help">Help</a>
 	<br/>
 	
 	<table id="dataTable" class="planIndex table-striped">
