double top row pills

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -59,7 +59,7 @@
 	            {% endif %}
             </ul>
             	<div></div>
-	            <div class="">
+	            <div class="mt-1">
 	            {% if user.is_authenticated %}
 	                 <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
 	            {% else %} 
