--- a/apps/basaltApp/templates/basaltApp/index.html
+++ b/apps/basaltApp/templates/basaltApp/index.html
@@ -46,4 +46,20 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
   </tr>
 </table>
 </p>
+<div class="fixed-bottom container-fluid bg-primary d-flex justify-content-between py-2 ">
+<a href="https://ti.arc.nasa.gov/tech/asr/intelligent-robotics/" target="_blank" title="IRG" >
+    			<img src="{{STATIC_URL}}bootstrap/img/irg.png" alt="IRG logo" />
+    		</a>
+    		<div class="d-flex align-items-center">
+    		<h5 class="text-primary-inverse ">
+    			<a href="https:/www.xgds.org" target="_blank" title="xGDS" class="text-primary-inverse">
+    				<strong>Powered by xGDS</strong>
+    			</a>
+    		</h5>
+    		</div>
+    		
+<a href="http://www.nasa.gov" title="NASA" target="_blank">
+    			<img src="{{STATIC_URL}}bootstrap/img/meatball.png"  alt="NASA logo" />
+    		</a>
+</div>
 {% endblock content %}
