--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -141,7 +141,7 @@
         data-gs-width="2" data-gs-height="1">
         <div class="grid-stack-item-content" >
 		<i class="fa fa-unlock-alt pinDiv"></i><br />
-		<form class="label_number_form" id="label_number_form" action="{% url 'xgds_sample_record_edit' %}" method="post" enctype="multipart/form-data">
+		<form class="label_number_form mt-negative-1rem"  id="label_number_form" action="{% url 'xgds_sample_record_edit' %}" method="post" enctype="multipart/form-data" >
 			<strong> Look up sample </strong>
 			<table>
 				<tr>
