tuning buttons and tables

--- a/apps/basaltApp/templates/xgds_planner2/planIndex.html
+++ b/apps/basaltApp/templates/xgds_planner2/planIndex.html
@@ -41,7 +41,7 @@ table.planIndex td.exportFormat a {
 </div>
 </div>
 <table id="dataTable" class="planIndex">
-<thead class="table_header">
+<thead>
   <tr>
   	<th><label for="pick_master">All</label><br/><input type="checkbox" id="pick_master" /></th>
     <th></th>
