--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -9,21 +9,6 @@
     {{ block.super }}
 {% endblock %}
 
-{% block cssExtras %}
-{{ block.super }}
-<style type="text/css" title="currentStyle">
-	@import "{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css";
-</style>
-<style>
-.startButton {
-	background: #4fb346;
- }
- .stopButton {
- 	background: #b34646;
- }
-</style>
-{% endblock cssExtras %}
-
 {% block sitemenu-content-secondary %}
     {% include "xgds_planner2/planner2_subnav.html" %}
 {% endblock %}
@@ -32,15 +17,21 @@
 	{% if errorString %}
 	<span class="error">{{ errorString }}</span>
 	{% endif %}
-	<form name='TodayForm' id="todayForm" action="{% url 'planner2_updateToday' %}" method="post">
-	<input type="checkbox" name="today" id="id_today" {% if request.session.today %} checked="checked" {%endif %} ></input><label for="id_today">Today Only</label>
-	</form>
-	<a class="btn btn-primary" role="button" href="{% url 'planner2_addGroupFlight' %}" >Create {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
-	<a class="btn btn-primary" role="button" href="{% url 'planner2_manageFlightHelp' %}" target="help">Help</a>
-	<br/>
-	
+	<div class="d-flex justify-content-between" style="width: 100%;">
+		<form name='TodayForm' id="todayForm" action="{% url 'planner2_updateToday' %}" method="post">
+			<label for="id_today" style="display:inline">
+				<input type="checkbox" class="mr-1" name="today" id="id_today" {% if request.session.today %} checked="checked" {%endif %} ></input>
+				Today
+			</label>
+		</form>
+		<div class="btn-group mr-auto" role="group">
+			<a class="btn btn-primary" role="button" href="{% url 'planner2_addGroupFlight' %}" >Create {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
+			<a class="btn btn-primary" role="button" href="{% url 'planner2_manageFlightHelp' %}" target="help">Help</a>
+		</div>
+	</div>
+		
 	<table id="dataTable" class="planIndex table-striped">
-	<thead class="table_header">
+	<thead>
 		<tr>
 		<th>Name</th>
 		<th>EV</th>
@@ -65,8 +56,8 @@
 		<td >&nbsp;&nbsp;&nbsp;{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}: {{ flight.name }}</td>
 		<td></td>
 		<td></td>
-		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'planner2_startFlight' flight.uuid %}" class="button  startButton">{% if flight.start_time %}re{%endif%}start</a></td>
-		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="button  stopButton">stop</a></td>
+		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'planner2_startFlight' flight.uuid %}" class="btn btn-green btn-sm">{% if flight.start_time %}re{%endif%}start</a></td>
+		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="btn btn-red btn-sm">stop</a></td>
 		<td></td>
 	</tr>
 		{% for pe in flight.plans.all %}
@@ -75,8 +66,8 @@
 				<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'planner2_edit' pe.plan.id %}">{{ pe.plan.escapedName }}</a></td>
 				<td>{% if pe.ev %}{{ pe.ev}}{% endif %}</td>
 				<td>{% if pe.planned_start_time %}{% timezone flight.timezone %} {{ pe.planned_start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.planned_start_time|date:'c' %}">PML</a>{% endif %}</td>
-				<td>{% if pe.start_time %}{% timezone flight.timezone %}  {{pe.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.start_time|date:'c' %}">PML</a>{% else %} <a href="{% url 'planner2_startPlan' pe.id %}">Start</a>  {% endif %}</td>
-				<td>{% if pe.end_time %} {% timezone flight.timezone %} {{pe.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% elif pe.start_time %} <a href="{% url 'planner2_stopPlan' pe.id %}">Stop</a> {% endif %}</td>
+				<td>{% if pe.start_time %}{% timezone flight.timezone %}  {{pe.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.start_time|date:'c' %}">PML</a>{% else %} <a href="{% url 'planner2_startPlan' pe.id %}" class="btn btn-green btn-sm">Start</a>  {% endif %}</td>
+				<td>{% if pe.end_time %} {% timezone flight.timezone %} {{pe.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% elif pe.start_time %} <a href="{% url 'planner2_stopPlan' pe.id %}" class="btn btn-red btn-sm">Stop</a> {% endif %}</td>
 				<td>{% if not pe.start_time %}<a href="{% url 'planner2_deletePlanExecution' pe.id %}">Delete</a>{% endif %}</td>
 			</tr> 
 			{% endwith %}
