--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -59,7 +59,7 @@
         data-gs-width="3" data-gs-height="3">
         <div class="grid-stack-item-content" >
 	<div class="error-message upload-error"></div>
-	<i class="fa fa-unlock-alt pinDiv"></i><br />
+	<i class="fa fa-unlock-alt pinDiv gray-light"></i><br />
 	<div id="save-status"> {{status}} </div>
 	
 	<div> <strong> Viewing sample</strong> <a id="edit_sample_button" href="{% url 'xgds_sample_record_update' sample.label.number %}" class="btn btn-primary ">Edit</a> </div>
@@ -140,7 +140,7 @@
         data-gs-x="3" data-gs-y="3"
         data-gs-width="2" data-gs-height="1">
         <div class="grid-stack-item-content" >
-		<i class="fa fa-unlock-alt pinDiv"></i><br />
+		<i class="fa fa-unlock-alt pinDiv gray-light"></i><br />
 		<form class="label_number_form mt-negative-1rem"  id="label_number_form" action="{% url 'xgds_sample_record_edit' %}" method="post" enctype="multipart/form-data" >
 			<strong> Look up sample </strong>
 			<table>
