--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -32,7 +32,6 @@
 	
 	// show the notes div
 	var notes_input_div = $("#notes_input");
-	notes_input_div.removeAttr('hidden');
 	notes_input_div.show();
 	
 	var taginput = notes_input_div.find('.taginput');
@@ -63,7 +62,7 @@
 	<div id="save-status"> {{status}} </div>
 	
 	<div> <strong> Viewing sample</strong> <a id="edit_sample_button" href="{% url 'xgds_sample_record_update' sample.label.number %}" class="btn btn-primary ">Edit</a> </div>
-	<input type=hidden name=sampleId value="{{ sample.pk }}">
+	<input type='hidden' name='sampleId' value="{{ sample.pk }}">
 	<table class="table-striped">
 		<tr>
 			<th><label for="id_name">Name:</label></th>
