--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -4,9 +4,11 @@
 			<a class="nav-link {% currentnav planner2_index %} " href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a>
 		</li>
 		<li class='nav-item'>
-			<a class="nav-link {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan %}" href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
+			<a class="nav-link {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan planner2_group_flight_summary %}" href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
 		</li>
-		<li class='nav-item'><a class="nav-link {% currentnav planner2_edit_ev %}" href="{% url 'planner2_edit_ev' %}"> Crew Mass </a></li>
+		<li class='nav-item'>
+			<a class="nav-link {% currentnav planner2_edit_ev %}" href="{% url 'planner2_edit_ev' %}"> Crew Mass </a>
+		</li>
 		<!-- 
 	    <li class='nav-item'><a class='nav-link {% currentnav planner2_help %}' href="{% url 'planner2_help' %}">Planner Help</a></li>
 	     -->
