more bootstrap tuning

--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -24,7 +24,7 @@
 				Today
 			</label>
 		</form>
-		<div class="btn-group mr-auto" role="group">
+		<div class="btn-group" role="group">
 			<a class="btn btn-primary" role="button" href="{% url 'planner2_addGroupFlight' %}" >Create {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
 			<a class="btn btn-primary" role="button" href="{% url 'planner2_manageFlightHelp' %}" target="help">Help</a>
 		</div>
