--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -61,10 +61,11 @@
             	<div></div>
 	            <div class="mt-1">
 	            {% if user.is_authenticated %}
-	                 <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
+	                 <a class="btn btn-primary btn btn-primary" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
 	            {% else %} 
-	                <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ login_url_with_next }}"title="Login">Login</a>
+	                <a class="btn btn-primary btn btn-primary" href="{{ login_url_with_next }}"title="Login">Login</a>
 	            {% endif %} 
+	            <a href="{% url 'email_feedback' %}" class='btn btn-primary fa fa-envelope' role='button'></a>
 	            {% help_button help_content_path title %}
 	            </div>
             </div>
