--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -1,18 +1,18 @@
 {% block sitemenu-content-secondary %}
 {% load nav %}
-		<li class='nav-item '>
-			<a class="nav-link {% currentnav planner2_index %} " href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a>
+		<li class='nav-item {% currentnav planner2_index planner2_planCreate planner2_planImport*%}'>
+			<a class="nav-link {% currentnav planner2_index planner2_planCreate planner2_planImport*%} " href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a>
 		</li>
-		<li class='nav-item'>
-			<a class="nav-link {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan planner2_group_flight_summary %}" href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
+		<li class='nav-item {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan planner2_group_flight_summary planner2_addGroupFlight%}'>
+			<a class="nav-link {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan planner2_group_flight_summary planner2_addGroupFlight %}" href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
 		</li>
-		<li class='nav-item'>
+		<li class='nav-item {% currentnav planner2_edit_ev %}'>
 			<a class="nav-link {% currentnav planner2_edit_ev %}" href="{% url 'planner2_edit_ev' %}"> Crew Mass </a>
 		</li>
 		<!-- 
 	    <li class='nav-item'><a class='nav-link {% currentnav planner2_help %}' href="{% url 'planner2_help' %}">Planner Help</a></li>
 	     -->
 		{% if plan_json %}
-			<li class='nav-item ' ><a class="nav-link {% currentnav planner2_edit %}"> Edit {{ plan_name }}</a></li>
+			<li class='nav-item {% currentnav planner2_edit %}' ><a class="nav-link {% currentnav planner2_edit %}"> Edit {{ plan_name }}</a></li>
 		{% endif %}
 {% endblock %}
