--- a/apps/basaltApp/static/bootstrap/scss/_xgds_theme.scss
+++ b/apps/basaltApp/static/bootstrap/scss/_xgds_theme.scss
@@ -20,6 +20,8 @@ $note-tag-color: $white;
 $color-table-th-bg: $color-secondary-bg;
 $color-table-th: $color-secondary;
 
+$headings-color:  #5b5b0a;
+
 // Body
 //
 // Settings for the `<body>` element.
