fixed header color for planner views and fixed cut copy paste delete for commands

--- a/apps/basaltApp/static/bootstrap/scss/_xgds_theme.scss
+++ b/apps/basaltApp/static/bootstrap/scss/_xgds_theme.scss
@@ -2,7 +2,7 @@ $color-primary-bg: #DBDBCE; //#848487; //#9a9a9d; //#838386; //#646466;	// prima
 $color-secondary-bg: #004489; //#005c8e; //#42A5DA; // secondary background color for subnav
 $color-tertiary-bg: #CCCC99; //#8b9ba3; // tertiary background color
 
-$color-primary: white;	// primary foreground color	
+$color-primary: #004489;	// primary foreground color	
 $color-secondary: white; // secondary foreground color
 $color-tertiary: white;	//tertiary foreground color
 
